samples/_failures_safe/1761330004_e81b35_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90334c35.c: In function ‘main’:
./samples/SAFE/__tmp_90334c35.c:161:17: error: expected expression at end of input
  161 |                 if (status == 1)
      |                 ^~
./samples/SAFE/__tmp_90334c35.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_90334c35.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_90334c35.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_90334c35.c:161:17: error: expected declaration or statement at end of input
